fix index page overflow on small devices

--- a/app/components/client/Index/style.scss
+++ b/app/components/client/Index/style.scss
@@ -4,6 +4,7 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 
 .intro {
